--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -1,31 +1,32 @@
+@import "mixins";
+
 div[data-handler=markets] {
   .ordertable-wrap {
     width: 100%;
 
     &:first-child {
-      border-bottom: 1px solid $light_border_color;
+      @include border-bottom;
     }
 
     &:last-child {
-      border-top: 1px solid $light_border_color;
+      @include border-top;
     }
 
     tbody#sellRows {
-      border-top: 1px solid $light_border_color;
+      @include border-top;
     }
   }
 
   .ordertable-header {
+    @include border-top;
+
     height: 30px;
-    padding: 0 45px 0 10px;
+    padding: 0 40px 0 10px;
   }
 
   .orderbook {
     min-width: 300px;
     width: 90%;
-    border-right: 1px solid $light_border_color;
-    border-left: 1px solid $light_border_color;
-    border-top: 1px solid $light_border_color;
 
     & > div:first-child { // buy orders
       order: 3;
@@ -58,7 +59,7 @@ div[data-handler=markets] {
       span.unitbox {
         position: absolute;
         font-size: 14px;
-        font-family: "demi-sans", sans-serif;
+        font-weight: bold;
         right: 5px;
         top: 48%; // Looks better than 50 for some reason.
         transform: translateY(-50%);
@@ -67,8 +68,10 @@ div[data-handler=markets] {
 
       button {
         padding: 5px 25px;
+        border: 1px solid #78787877;
         border-radius: 3px;
-        color: #555;
+        background-color: var(--body-bg);
+        color: var(--market-btn-color);
 
         &:disabled {
           opacity: 0.4;
@@ -77,32 +80,36 @@ div[data-handler=markets] {
 
       button:hover,
       button.selected {
-        color: black;
+        color: var(--market-btn-selected-color);
       }
 
       button.submit {
-        background-color: #5cba8b;
+        color: var(--market-btn-selected-color);
       }
 
       button.selected,
       button.submit {
         &.buygreen-bg {
-          background-color: #207a4699;
+          background-color: var(--market-buygreen-bg);
         }
 
         &.sellred-bg {
-          background-color: #99302b99;
+          background-color: var(--market-sellred-bg);
         }
-      }
-
-      .ico-unlocked {
-        color: #1e7d11;
       }
 
       #orderPreview,
       .h21 {
         height: 21px;
       }
+    }
+
+    .ico-unlocked {
+      color: $success;
+    }
+
+    .ico-disconnected {
+      color: $warning;
     }
   }
 
@@ -122,7 +129,7 @@ div[data-handler=markets] {
   }
 
   #unreadyOrdersMsg {
-    color: red;
+    color: $danger;
   }
 
   .unready-user-order {
@@ -130,14 +137,12 @@ div[data-handler=markets] {
   }
 
   .user-order {
-    border: 1px solid $light_border_color;
-
     &:not(:last-child) {
-      border-bottom-style: none;
+      border-bottom-style: none !important;
     }
 
     &:last-child .order-details {
-      border-bottom-style: none;
+      border-bottom-style: none !important;
       padding-bottom: 0;
     }
 
@@ -157,11 +162,11 @@ div[data-handler=markets] {
         width: 8px;
 
         &.buy {
-          background-color: $buycolor_light;
+          background-color: var(--market-buy-color);
         }
 
         &.sell {
-          background-color: $sellcolor_light;
+          background-color: var(--market-sell-color);
         }
 
         &.inactive {
@@ -176,7 +181,7 @@ div[data-handler=markets] {
         &.active {
           margin: 0 5px;
           width: 8px;
-          background-color: $buycolor_light;
+          background-color: var(--market-buy-color);
         }
       }
     }
@@ -184,9 +189,6 @@ div[data-handler=markets] {
     .order-details {
       margin-bottom: 25px;
       padding: 0 10px 10px;
-      border-width: 1px;
-      border-color: $light_border_color;
-      border-style: solid none;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       row-gap: 10px;
@@ -218,13 +220,7 @@ div[data-handler=markets] {
   }
 
   table.ordertable {
-    border-collapse: collapse;
-    border: none;
-    width: 100%;
-
-    th {
-      font-family: "demi-sans", sans-serif;
-    }
+    color: var(--text-color-secondary);
 
     td,
     th {
@@ -240,11 +236,6 @@ div[data-handler=markets] {
       min-width: 30px;
     }
 
-    tbody > tr:hover,
-    tbody > tr.hover {
-      background-color: white;
-    }
-
     .ico-check {
       color: #9b8c09;
     }
@@ -253,18 +244,18 @@ div[data-handler=markets] {
   .markettab {
     height: 30px;
     border-style: none;
+    background-color: var(--body-bg);
 
     &.selected {
-      background-color: #7773;
+      background-color: var(--market-markettab-selected-bg);
     }
   }
 
   .numorders {
-    background-color: #c5c5e6;
+    background-color: var(--market-numorders-bg);
     border-radius: 3px;
     line-height: 1;
-    padding: 1px;
-    font-size: 0.9em;
+    padding: 1px 2px;
   }
 
   #leftMarketDock {
@@ -273,22 +264,17 @@ div[data-handler=markets] {
     display: flex;
     top: 0;
     left: 0;
-    border-right-style: solid;
-    border-color: $light_border_color;
-    border-width: 1px;
-    background-color: $light_body_bg;
     z-index: 2;
     min-height: -webkit-fill-available; // for webkit browsers
+    background-color: var(--body-bg);
 
-    &.default {
+    &.default,
+    &.stashed {
       display: none;
     }
 
     #searchBoxV1 {
       height: 55px;
-      border-bottom-style: solid;
-      border-color: $light_border_color;
-      border-width: 1px;
     }
 
     &.stashed {
@@ -344,14 +330,6 @@ div[data-handler=markets] {
           width: 20px;
           height: 20px;
           position: relative;
-
-          // &:nth-child(0) {
-          //   top: 5px;
-          // }
-
-          // &:nth-child(1) {
-          //   top: -5px;
-          // }
         }
 
         .dexname {
@@ -401,18 +379,16 @@ div[data-handler=markets] {
     position: absolute;
     left: 50px;
     top: 5px;
-    background-color: $light_body_bg;
+    background-color: var(--body-bg);
     z-index: 1;
     display: none; // shown on hover
   }
 
   #durBttnBox {
     .candle-dur-bttn {
-      background-color: $light_body_bg;
-      border: 1px solid #777;
+      background-color: var(--body-bg);
       padding: 2px 4px;
       font-size: 14px;
-      border-radius: 3px;
       line-height: 1;
       margin: 0 2px;
 
@@ -422,8 +398,8 @@ div[data-handler=markets] {
 
       &:hover,
       &.selected {
-        border-color: #dd7900;
-        color: #dd7900;
+        border-color: $warning;
+        color: $warning;
       }
     }
   }
@@ -483,7 +459,7 @@ div[data-handler=markets] {
 
     &.completed {
       .title {
-        color: #5cba8b;
+        color: $success;
       }
 
       #regStatusMessage {
@@ -493,7 +469,7 @@ div[data-handler=markets] {
 
     &.error {
       .title {
-        color: red;
+        color: $danger;
       }
     }
   }
@@ -508,7 +484,7 @@ div[data-handler=markets] {
     }
 
     .red {
-      color: #f55a;
+      color: $danger;
     }
 
     .disclaimer {
@@ -517,21 +493,21 @@ div[data-handler=markets] {
 
     .header {
       &.buygreen-bg {
-        background-color: #207a4699;
+        background-color: var(--market-buygreen-bg);
       }
 
       &.sellred-bg {
-        background-color: #99302b99;
+        background-color: var(--market-sellred-bg);
       }
     }
 
     button.selected {
       &.buygreen-bg {
-        background-color: #207a4699;
+        background-color: var(--market-buygreen-bg);
       }
 
       &.sellred-bg {
-        background-color: #99302b99;
+        background-color: var(--market-sellred-bg);
       }
     }
 
@@ -548,10 +524,10 @@ div[data-handler=markets] {
 
       &.selected {
         opacity: 1;
-        background-color: #0001;
+        background-color: var(--form-opt-selected-bg);
 
         div.opt-check {
-          background-color: #2cce9c;
+          background-color: $success;
         }
       }
     }
@@ -567,41 +543,30 @@ div[data-handler=markets] {
     max-width: 425px;
 
     .indent {
-      border-left: 2px solid #777a;
+      border-left: 2px solid var(--border-color);
     }
 
     table.fee-breakout {
-      margin: 5px 0;
-
       td {
-        border: 1px solid #777a;
         text-align: center;
         padding: 2px 5px;
       }
     }
   }
 
-  #leftHider {
-    border-left-style: solid;
-    padding: 0 5px;
-  }
 
   #marketReopener {
     display: none;
-    border-style: none solid solid none;
     padding: 10px 0;
     position: absolute;
     top: 0;
     left: 0;
-    background-color: $light_body_bg;
+    background-color: var(--body-bg);
     z-index: 10;
   }
 
   #leftHider,
   #marketReopener {
-    border-color: $light_border_color;
-    border-width: 1px;
-
     .ico-arrowback,
     .ico-arrowright {
       transform: scaleX(0.5);
@@ -635,9 +600,6 @@ div[data-handler=markets] {
   }
 
   .twentyfour {
-    margin-left: 0;
-    border-left: 1px solid $light_border_color;
-
     .data-point {
       margin-left: 0;
 
@@ -647,7 +609,6 @@ div[data-handler=markets] {
 
       span.label {
         width: 100%;
-        border-bottom: 1px solid $light_border_color;
       }
 
       &:first-child > span.label {
@@ -699,9 +660,6 @@ div[data-handler=markets] {
   display: none;
 }
 
-#main .market-stats-v1 {
-  border-bottom: 1px solid $light_border_color;
-}
 
 #recentMatchesBox {
   @extend .stylish-overflow;
@@ -748,6 +706,7 @@ div[data-handler=markets] {
 
   #headerSpace .market-stats-v1 {
     display: flex;
+    border-bottom: none !important;
   }
 
   div[data-handler=markets] #leftMarketDock {
@@ -796,11 +755,11 @@ div[data-handler=markets] {
       }
 
       &:first-child {
-        border-bottom: 1px solid $light_border_color;
+        @include border-bottom;
       }
 
       &:last-child {
-        border-top: 1px solid $light_border_color;
+        @include border-top;
       }
 
       tbody {
@@ -837,6 +796,9 @@ div[data-handler=markets] {
 
     .order-panel {
       width: 375px;
+      border-right: none;
+      border-top: none;
+      border-bottom: none;
 
       & > div {
         @include fill-abs;
@@ -852,13 +814,14 @@ div[data-handler=markets] {
     }
   }
 
-  table.ordertable {
-    width: auto;
+  .ordertable-header {
+    border-top: none;
   }
 
   #recentMatchesBox {
     overflow: visible;
     max-height: none;
+    border-bottom: none;
   }
 }
 
@@ -869,8 +832,8 @@ div[data-handler=markets] {
   z-index: 5;
   border-style: none solid solid;
   border-width: 0 2px 2px 1px;
-  border-color: $light_input_border;
-  background-color: $light_body_bg;
+  border-color: var(--border-color);
+  background-color: var(--body-bg);
   cursor: pointer;
   overflow: hidden;
 
