--- a/client/webserver/site/src/css/order.scss
+++ b/client/webserver/site/src/css/order.scss
@@ -4,38 +4,26 @@ div.order-datum {
   align-items: stretch;
   justify-content: start;
   text-align: center;
-  border: 1px solid #777a;
   font-size: 15px;
-  margin: 5px 10px 5px 0;
 
   div:first-child {
-    padding: 2px 15px;
-    border-bottom: 1px solid #777a;
     font-family: $demi-sans;
-    background-color: #7772;
-  }
-
-  div:last-child,
-  a:last-child {
-    padding: 4px 15px;
+    background-color: var(--body-bg-tertiary);
   }
 }
 
 div.match-header {
-  padding: 10px 0;
-  background-color: #7772;
+  background-color: var(--body-bg-tertiary);
 }
 
 div.match-card {
   display: flex;
   flex-direction: column;
-  margin: 10px 20px 10px 0;
   align-items: stretch;
-  border: 1px solid #777a;
   font-size: 14px;
-
+  
   .red {
-    color: #bd4646;
+    color: $danger;
   }
 }
 
