--- a/client/webserver/site/src/html/init.tmpl
+++ b/client/webserver/site/src/html/init.tmpl
@@ -5,59 +5,59 @@
 
     {{- /* App Initialization */ -}}
     <form id="appPWForm">
-      <div class="px-2 py-1 text-center fs28 sans-light">[[[Set App Password]]]</div>
-      <div class="fs18 mt-2 sans-light">[[[reg_set_app_pw_msg]]]</div>
-      <hr class="dashed my-4">
-      <div class="pb-3">
-        <label for="appPW" class="form-label ps-1 mb-1">[[[Password]]]</label>
+      <h3>[[[Set App Password]]]</h3>
+      <div class="fs18 mb-3">[[[reg_set_app_pw_msg]]]</div>
+      <hr class="dashed my-3">
+      <div class="mb-3">
+        <label for="appPW" class="form-label">[[[Password]]]</label>
         <input type="password" class="form-control select" id="appPW" autocomplete="new-password">
       </div>
-      <div class="pb-3">
-        <label for="appPWAgain" class="form-label ps-1 mb-1">[[[Password Again]]]</label>
+      <div class="mb-3">
+        <label for="appPWAgain" class="form-label">[[[Password Again]]]</label>
         <input type="password" class="form-control select" id="appPWAgain" autocomplete="off">
       </div>
-      <div>
+      <div class="mb-3">
         <input class="form-check-input" type="checkbox" id="rememberPass">
         <label for="rememberPass" class="form-check-label ps-1">[[[Remember my password]]]</label>
       </div>
-      <div class="pb-2 mt-3">
+      <div class="mb-3">
         <div class="py-2 d-flex justify-content-between align-items-center">
-         <label for="seedInput" class="form-label ps-1 mb-1" id="toggleSeedInput">
-          <span id="toggleSeedInputIcon" class="fs11 ico-plus"></span>
+          <label for="seedInput" class="form-label" id="toggleSeedInput">
+          <span id="toggleSeedInputIcon" class="fs11 ico-plus me-1"></span>
           [[[Restoration Seed]]]
           </label>
         </div>
         <textarea class="form-control select mono d-hide" id="seedInput" rows="4" autocomplete="off" spellcheck="false"></textarea>
       </div>
-      <div class="d-flex justify-content-end mt-2">
-        <button id="appPWSubmit" type="submit" class="col-8 justify-content-center fs15 bg2 selected">[[[Submit]]]</button>
+      <div class="d-flex justify-content-end">
+        <button id="appPWSubmit" type="submit" class="go px-4">[[[Submit]]]</button>
       </div>
-      <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="appPWErrMsg"></div>
+      <div class="fs15 pt-3 text-center d-hide text-danger text-break" id="appPWErrMsg"></div>
     </form>
 
     {{- /* Quick Config Form */ -}}
     <form id="quickConfigForm" class="d-hide">
-      <div class="px-2 py-1 text-center fs28 sans-light">[[[Quick Configuration]]]</div>
+      <h3>[[[Quick Configuration]]]</h3>
       <div id="qcChoices">
-        <div class="fs18 mt-2">[[[quickconfig_wallet_header]]]</div>
-        <div id="qcWalletsBox">
-          <label id="qcWalletTmpl" class="p-1 my-1 d-flex justify-content-start align-items-center hoverbg pointer">
+        <div class="fs18 mb-2">[[[quickconfig_wallet_header]]]</div>
+        <div id="qcWalletsBox" class="mb-3">
+          <label id="qcWalletTmpl" class="p-1 d-flex justify-content-start align-items-center hoverbg pointer">
             <input class="form-check-input" type="checkbox" data-tmpl="checkbox" checked>
             <img class="quickconfig-asset-logo mx-2" data-tmpl="icon">
             <span data-tmpl="name" class="fs20"></span>
           </label>
         </div>
         <hr class="dashed my-3">
-        <div class="fs18 mt-2">[[[quickconfig_server_header]]]</div>
+        <div class="fs18 mb-3">[[[quickconfig_server_header]]]</div>
         <div id="qcServersBox">
-          <label id="qcServerTmpl" class="d-flex justify-content-start align-items-center p-1 my-1 hoverbg pointer">
+          <label id="qcServerTmpl" class="d-flex justify-content-start align-items-center p-1 hoverbg pointer">
             <input class="form-check-input" type="checkbox" data-tmpl="checkbox" checked>
             <span data-tmpl="host" class="ms-2 fs18 lh1"></span>
           </label>
         </div>
-        <hr class="dashed my-4">
-        <div class="flex-center mt-4">
-          <button id="quickConfigSubmit" type="submit" class="col-8 justify-content-center fs15 bg2 selected">[[[Submit]]]</button>
+        <hr class="dashed my-3">
+        <div class="flex-center">
+          <button id="quickConfigSubmit" type="submit" class="go px-4">[[[Submit]]]</button>
         </div>
       </div>
 
@@ -84,15 +84,15 @@
 
     {{- /* Seed Backup */ -}}
     <form id="seedBackupForm" class="d-hide">
-      <div class="px-2 py-1 text-center fs28 sans-light">[[[Backup App Seed]]]</div>
+      <h3>[[[Backup App Seed]]]</h3>
       <div id="sbWanna">
-        <div class="fs18 mt-2">
+        <div class="fs18 mb-3">
           [[[seed_backup_implore]]]
         </div>
-        <div class="flex-center my-2">
-          <button id="showSeed" class="fs18 selected">[[[Backup Now]]]</button>
+        <div class="flex-center mb-3">
+          <button id="showSeed" class="go px-4">[[[Backup Now]]]</button>
         </div>
-        <hr class="dashed my-4">
+        <hr class="dashed my-3">
         <div class="d-flex justify-content-end">
           <a class="d-block plainlink fs15 flex-center hoverbg pointer" href="/wallets">
             <span>[[[Skip this step for now]]]</span>
@@ -102,11 +102,13 @@
       </div>
 
       <div id="sbSeed" class="d-hide">
-        <div class="fs18 mt-2">[[[save_seed_instructions]]]</div>
-        <div class="my-2 p-2 flex-center">
-          <div class="fs18 mono mx-auto select-all" id="mnemonic"></div>
+        <div class="fs18 mb-3">[[[save_seed_instructions]]]</div>
+        <div class="my-3 px-3 flex-center">
+          <pre class="fs18 mono mx-auto user-select-all text-break" id="mnemonic"></pre>
         </div>
-        <button id="seedAck" class="selected">[[[Done]]]</button>
+        <div class="d-flex justify-content-end">
+          <button id="seedAck" class="go px-4">[[[Done]]]</button>
+        </div>
       </div>
     </form>
 
