--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -11,7 +11,7 @@
         linear-gradient(
           to bottom,
           #e0e0e000,
-          $light_panel
+          #f0f0f0
           90%
         );
     }
@@ -37,34 +37,6 @@
     margin-right: 5px;
   }
 
-  table.reg-asset-markets {
-    @extend .stylish-overflow;
-
-    display: block;
-    max-height: 120px;
-    line-height: 1.15;
-    overflow-y: hidden;
-    margin-right: 8px;
-
-    &:hover {
-      overflow-y: auto;
-    }
-
-    th {
-      font-weight: normal;
-      font-size: 13px;
-    }
-
-    td {
-      font-size: 14px;
-    }
-
-    th,
-    td {
-      padding: 1px 5px;
-    }
-  }
-
   div.reg-assets-markets-wrap {
     position: relative;
 
@@ -73,24 +45,6 @@
     }
   }
 
-  #regAssets {
-    color: #c7c3cc;
-  }
-
-  .reg-asset-table {
-    thead > tr > th {
-      border-top: 1px solid;
-    }
-
-    th,
-    td {
-      border-color: $light_border_color;
-      border-width: 1px;
-      border-style: none solid solid;
-      padding: 5px;
-      text-align: left;
-    }
-  }
 
   input[data-tmpl=regAssetTier] {
     width: 3em;
@@ -120,7 +74,6 @@
   }
 
   input.app-pass {
-    // margin: 0 auto;
     display: inline-block;
     max-width: 250px;
   }
@@ -146,17 +99,22 @@
     display: flex;
     justify-content: flex-start;
     align-items: stretch;
-
+    
     .wtab {
+      background-color: var(--body-bg-secondary);
       padding: 8px 20px;
       font-size: 15px;
       border-style: solid solid none;
       border-radius: 5px 5px 0 0;
       border-width: 1px;
-      border-color: #555;
+      border-color: var(--border-color);
       opacity: 0.8;
       position: relative;
       z-index: 150;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     .wtab:not(:first-child) {
@@ -167,7 +125,7 @@
       opacity: 1;
       top: 1px;
       cursor: default;
-      background-color: white;
+      background-color: var(--form-selected-tab-bg);
     }
 
     .wtab:not(.selected) {
@@ -179,11 +137,6 @@
     }
   }
 
-  .bordertop {
-    border-top: solid 1px #555;
-    border-radius: 0 10px 0 0;
-  }
-
   .one-bttn {
     display: inline-block;
     font-size: 22px;
@@ -191,7 +144,6 @@
     background-color: #0b5831;
     border-radius: 5px;
     animation: glow 1.5s infinite alternate;
-    color: $font-color-dark;
   }
 
   .one-bttn:hover {
@@ -227,6 +179,10 @@ button.form-button {
   }
 }
 
+.form-check-label {
+  user-select: none;
+}
+
 #forms {
   @extend .stylish-overflow;
   @extend .flex-center;
@@ -237,7 +193,7 @@ button.form-button {
   left: 0;
   right: 0;
   padding: 25px 0;
-  background-color: $light_form_bg;
+  background-color: var(--form-bg);
   z-index: 101;
 
   & > form {
@@ -249,6 +205,12 @@ button.form-button {
 
     button {
       @extend .form-button;
+    }
+
+    h3 {
+      text-align: center;
+      margin-bottom: 1rem;
+      position: relative;
     }
   }
 }
@@ -352,25 +314,8 @@ a[data-tmpl=walletCfgGuide] {
 .deposit-address {
   font-size: 15px;
   padding: 5px 10px;
-  border: 1px solid $light_border_color;
 }
 
-.order-opt {
-  opacity: 0.7;
-
-  &:not(.selected) {
-    cursor: pointer;
-  }
-
-  &.selected {
-    opacity: 1;
-    background-color: #e8ebed;
-
-    div.opt-check {
-      background-color: #2cce9c;
-    }
-  }
-}
 
 .slider-container,
 .order-opt {
@@ -415,13 +360,13 @@ a[data-tmpl=walletCfgGuide] {
 }
 
 div[data-tmpl=scoreTray] {
-  background-color: $buycolor_dark;
+  background-color: var(--buy-color);
   height: 12px;
   border-radius: 100px;
   overflow: hidden;
 
   div[data-tmpl=scoreWarn] {
-    background-color: $sellcolor_dark;
+    background-color: var(--sell-color);
     position: absolute;
     top: 0;
     bottom: 0;
@@ -471,7 +416,7 @@ div[data-handler=init] {
   cursor: pointer;
 
   &.on {
-    background-color: $buycolor_dark;
+    background-color: var(--indicator-good);
   }
 
   & > div {
@@ -482,7 +427,7 @@ div[data-handler=init] {
     height: 0.7rem;
     border-radius: 0.35rem;
     transition: left 0.5s;
-    background-color: $dark_body_bg;
+    background-color: var(--body-bg);
   }
 
   &.on > div {
@@ -505,5 +450,53 @@ div[data-handler=init] {
 
   &.big.on > div {
     left: 1.05rem;
+  }
+}
+
+
+.dynamicopts {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  & > div {
+    min-height: 55px;
+  }
+
+  & > div:not(.repeatable) {
+    width: 47%;
+  }
+}
+
+body.dark {
+  ::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+  }
+
+  #regAssetForm {
+    div.reg-asset {
+      .fader {
+        background-image:
+          linear-gradient(
+            to bottom,
+            #13202b00,
+            #122739
+            90%
+          );
+      }
+
+      &:not(.nohover):hover {
+        .fader {
+          background-image:
+            linear-gradient(
+              to bottom,
+              #202c3500,
+              #202c35
+              90%
+            );
+        }
+      }
+    }
   }
 }
